se añadieron parrafos al index.html y se creó el archivo readme.md

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
 	<h1>Hola mundo</h1>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
 </body>
 </html>
