se agregó un div al index.html y se añadieron comentarios al readme.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
 	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
 	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et, nobis, sunt. Asperiores quod consequatur non pariatur illum repellat, sequi minima obcaecati neque doloribus, vitae alias, error nam porro officia, blanditiis.</p>
+	<div>Prueba QA 1</div>
 </body>
 </html>
