--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 	
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, consequatur repellat sapiente velit consequuntur reiciendis nulla, quae repudiandae quas.</p>
 
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, consequatur repellat sapiente velit consequuntur reiciendis nulla, quae repudiandae quas.</p>
+	<p>Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, <strong>consequatur repellat sapiente velit consequuntur</strong> reiciendis nulla, quae repudiandae quas.</p>
 
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, consequatur repellat sapiente velit consequuntur reiciendis nulla, quae repudiandae quas.</p>
-
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, consequatur repellat sapiente velit consequuntur reiciendis nulla, quae repudiandae quas.</p>
 </body>
 </html>
