Se modifica el titulo de la web

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1>Hola mundo</h1>
+	<h1>Bienvenido al sitio web</h1>
 	
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, consequatur repellat sapiente velit consequuntur reiciendis nulla, quae repudiandae quas.</p>
 
