Agregando estructura del encabezado

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
-	<h1>Bienvenidos!</h1>
-	
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, consequatur repellat sapiente velit consequuntur reiciendis nulla, quae repudiandae quas.</p>
-
-	<p>Lorem ipsum <strong>dolor sit amet</strong>, consectetur adipisicing elit. Iusto alias a tempore, commodi modi esse delectus assumenda sunt, sit ad, <strong>consequatur repellat sapiente velit consequuntur</strong> reiciendis nulla, quae repudiandae quas.</p>
+	<div class="container">
+		<h1>Mi sitio web</h1>
+		<ul>
+			<li>Inicio</li>
+			<li>Sobre mi</li>
+			<li>Servicios</li>
+			<li>Contacto</li>
+		</ul>
+	</div>
 
 </body>
 </html>
