Mejorando el Header

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
 
 	<div class="container">
-		<h1>Mi sitio web</h1>
-		<ul>
-			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Sobre mi</a></li>
-			<li><a href="#">Servicios</a></li>
-			<li><a href="#">Contacto</a></li>
-		</ul>
+		<header>
+			<h1>Mi sitio web</h1>
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Sobre mi</a></li>
+				<li><a href="#">Servicios</a></li>
+				<li><a href="#">Contacto</a></li>
+			</ul>
+		</header>
 	</div>
 
 </body>
