--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 
 	<div class="container">
 		<header>
-			<h1>Mi sitio web</h1>
-			<ul></ul>
+			<h1 class="logo">Mi sitio web</h1>
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Sobre mi </a></li>
+				<li><a href="#">Servicios</a></li>
+				<li><a href="#">Contacto</a></li>
+				<li></li>
+			</ul>
 		</header>
 		<main>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
