Añadir nueva seccion de texto y actualizar enlace del menu

--- a/index.html
+++ b/index.html
@@ -13,17 +13,24 @@
 			<h1 class="logo">Mi sitio web</h1>
 			<ul>
 				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Sobre mi </a></li>
+				<li><a href="#">Sobre nosotros</a></li>
 				<li><a href="#">Servicios</a></li>
 				<li><a href="#">Contacto</a></li>
 				<li></li>
 			</ul>
 		</header>
 		<main>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+			<section>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+			</section>
+			<section>
+				<h2>Subtítulo</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum aut quaerat voluptatum sit, mollitia suscipit corrupti incidunt reiciendis unde. Cum magnam maxime provident, dolor nesciunt fugiat aperiam iste omnis. Ea!</p>
+			</section>
 		</main>
 	</div>
 
