--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li><a href="#">Sobre nosotros</a></li>
 				<li><a href="#">Servicios</a></li>
 				<li><a href="#">Contacto</a></li>
-				<li></li>
+				<li><a href="#">Blog</a></li>
 			</ul>
 		</header>
 		<main>
